--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -62,6 +62,7 @@
   border-radius: 5px;
   background-color: #007bff;
   padding: 10px 20px;
+  margin: auto 10px;
   color:#ffffff;
 }
 .Tasks_Nav a:hover {
