WE HAVE A WORKING FRONTEND AND BACKEND LFGGGGG

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -71,7 +71,7 @@
   background-color: white;
 }
 
-.form-container{
+.new-form-container{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -96,6 +96,7 @@
   width: 100%;
 }
 .task-form button {
+  background-color: green;
   margin-top: 10px;
   display: flex;
   justify-self: center;
@@ -103,4 +104,29 @@
 .task-form #description {
   height: max-content;
   height: fit-content;
+}
+
+.delete-form-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+  padding: 10px;
+  margin: 20px;
+}
+.delete-task-form {
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 60%;
+  text-align: center;
+  align-content: center;
+  height: 20vh;
+}
+
+.delete-task-form button {
+  background-color: red;
+  margin-top: 10px;
+  display: flex;
+  justify-self: center;
 }
