--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -34,16 +34,6 @@
   margin: 0 auto;
 }
 
-.App-main button {
-  background-color: #007bff;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
 .App-main button:hover {
   background-color: #0056b3;
 }
@@ -52,7 +42,7 @@
   background-color: #f1f1f1;
   text-align: center;
   padding: 10px;
-  position: relative;
+  position: static;
   bottom: 0;
   width: 100%;
   border-top: 1px solid #ccc;
@@ -71,62 +61,129 @@
   background-color: white;
 }
 
-.new-form-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 20vh;
-  padding: 10px;
-  margin: 20px;
+
+.current-tasks-button {
+  color: white;
+  background-color:#8900b3;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.current-tasks-button:hover {
+  background-color: #0056b3;
 }
 
-.task-form {
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  width: 60%;
-  text-align: center;
-  align-content: center;
-  height: 20vh;
-}
-.task-form label {
-  display: block;
-}
-.task-form input{
+
+.model {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-}
-.task-form button {
-  background-color: green;
-  margin-top: 10px;
-  display: flex;
-  justify-self: center;
-}
-.task-form #description {
-  height: max-content;
-  height: fit-content;
-}
-
-.delete-form-container{
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 20vh;
-  padding: 10px;
-  margin: 20px;
 }
-.delete-task-form {
-  padding: 20px;
+.model-content {
+  justify-items: center;
+  background-color: white;
   border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  width: 60%;
-  text-align: center;
-  align-content: center;
-  height: 20vh;
+  height: 80%;
+  width: 50%;
+  overflow: auto;
+  padding: 30px;
 }
 
-.delete-task-form button {
+.model-content h2{
+  width: 80%;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 8px;
+}
+
+.close-button {
+  float: right;
+  color: white;
+  background-color: red;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.close-button:hover {
+  background-color: darkred;
+}
+
+.model-content ul {
+  list-style-type: none;
+  padding: 0;
+}
+.model-content li {
+  margin-bottom: 15px;
+  border-top: 1px solid black;
+  padding-bottom: 10px;
+}
+.model-content .delete-button {
+  color: white;
   background-color: red;
   margin-top: 10px;
   display: flex;
   justify-self: center;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
 }
+.model-content .delete-button:hover {
+  background-color: #007bff;
+}
+
+
+.new-form-container{
+  height: 400px;
+  border-radius: 20px;
+  box-shadow: 2px 6px 20px rgba(36, 36, 36, 0.219);
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  overflow:auto;
+  margin-bottom: 10%;
+}
+.task-form {
+  width: 60%;
+}
+
+.task-form label {
+  display: flex;
+  justify-self: center;
+}
+.task-form select {
+  text-align: center;
+  width: 30%;
+  height: 25px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+.task-form input{
+  width: 100%;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+.task-form button {
+  color: white;
+  background-color: green;
+  margin-top: 10px;
+  display: flex;
+  justify-self: center;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.task-form input#description {
+  height: 100px;
+}
+
